--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 
 # Test binary, built with `go test -c`
 *.test
-*.pkg/wkv.go
+pkg/wkv.go
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
